test/functions/iterators/bradc/captureEmpty.good
captureEmpty.chpl:5: error: cannot initialize array with element type 'nothing'
